src/main/java/edu/uiowa/jopenmm/OpenMMAmoebaLibrary.java

  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_getDPMEParametersInContext(const OpenMM_HippoNonbondedForce*, const OpenMM_Context*, double*, int*, int*, int*)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_getDPMEParametersInContext(
      PointerByReference target,
      PointerByReference context,
      DoubleBuffer alpha,
      IntBuffer nx,
      IntBuffer ny,
      IntBuffer nz);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_getDPMEParametersInContext(const OpenMM_HippoNonbondedForce*, const OpenMM_Context*, double*, int*, int*, int*)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_getDPMEParametersInContext(
      PointerByReference target,
      PointerByReference context,
      DoubleByReference alpha,
      IntByReference nx,
      IntByReference ny,
      IntByReference nz);
  /**
   * Original signature : <code>
   * int OpenMM_HippoNonbondedForce_addParticle(OpenMM_HippoNonbondedForce*, double, const OpenMM_DoubleArray*, const OpenMM_DoubleArray*, double, double, double, double, double, double, double, double, double, int, int, int, int)
   * </code>
   */
  public static native int OpenMM_HippoNonbondedForce_addParticle(
      PointerByReference target,
      double charge,
      PointerByReference dipole,
      PointerByReference quadrupole,
      double coreCharge,
      double alpha,
      double epsilon,
      double damping,
      double c6,
      double pauliK,
      double pauliQ,
      double pauliAlpha,
      double polarizability,
      int axisType,
      int multipoleAtomZ,
      int multipoleAtomX,
      int multipoleAtomY);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_getParticleParameters(const OpenMM_HippoNonbondedForce*, int, double*, OpenMM_DoubleArray*, OpenMM_DoubleArray*, double*, double*, double*, double*, double*, double*, double*, double*, double*, int*, int*, int*, int*)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_getParticleParameters(
      PointerByReference target,
      int index,
      DoubleBuffer charge,
      PointerByReference dipole,
      PointerByReference quadrupole,
      DoubleBuffer coreCharge,
      DoubleBuffer alpha,
      DoubleBuffer epsilon,
      DoubleBuffer damping,
      DoubleBuffer c6,
      DoubleBuffer pauliK,
      DoubleBuffer pauliQ,
      DoubleBuffer pauliAlpha,
      DoubleBuffer polarizability,
      IntBuffer axisType,
      IntBuffer multipoleAtomZ,
      IntBuffer multipoleAtomX,
      IntBuffer multipoleAtomY);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_getParticleParameters(const OpenMM_HippoNonbondedForce*, int, double*, OpenMM_DoubleArray*, OpenMM_DoubleArray*, double*, double*, double*, double*, double*, double*, double*, double*, double*, int*, int*, int*, int*)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_getParticleParameters(
      PointerByReference target,
      int index,
      DoubleByReference charge,
      PointerByReference dipole,
      PointerByReference quadrupole,
      DoubleByReference coreCharge,
      DoubleByReference alpha,
      DoubleByReference epsilon,
      DoubleByReference damping,
      DoubleByReference c6,
      DoubleByReference pauliK,
      DoubleByReference pauliQ,
      DoubleByReference pauliAlpha,
      DoubleByReference polarizability,
      IntByReference axisType,
      IntByReference multipoleAtomZ,
      IntByReference multipoleAtomX,
      IntByReference multipoleAtomY);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_setParticleParameters(OpenMM_HippoNonbondedForce*, int, double, const OpenMM_DoubleArray*, const OpenMM_DoubleArray*, double, double, double, double, double, double, double, double, double, int, int, int, int)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_setParticleParameters(
      PointerByReference target,
      int index,
      double charge,
      PointerByReference dipole,
      PointerByReference quadrupole,
      double coreCharge,
      double alpha,
      double epsilon,
      double damping,
      double c6,
      double pauliK,
      double pauliQ,
      double pauliAlpha,
      double polarizability,
      int axisType,
      int multipoleAtomZ,
      int multipoleAtomX,
      int multipoleAtomY);
  /**
   * Original signature : <code>
   * int OpenMM_HippoNonbondedForce_addException(OpenMM_HippoNonbondedForce*, int, int, double, double, double, double, double, double, OpenMM_Boolean)
   * </code>
   */
  public static native int OpenMM_HippoNonbondedForce_addException(
      PointerByReference target,
      int particle1,
      int particle2,
      double multipoleMultipoleScale,
      double dipoleMultipoleScale,
      double dipoleDipoleScale,
      double dispersionScale,
      double repulsionScale,
      double chargeTransferScale,
      int replace);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_getExceptionParameters(const OpenMM_HippoNonbondedForce*, int, int*, int*, double*, double*, double*, double*, double*, double*)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_getExceptionParameters(
      PointerByReference target,
      int index,
      IntBuffer particle1,
      IntBuffer particle2,
      DoubleBuffer multipoleMultipoleScale,
      DoubleBuffer dipoleMultipoleScale,
      DoubleBuffer dipoleDipoleScale,
      DoubleBuffer dispersionScale,
      DoubleBuffer repulsionScale,
      DoubleBuffer chargeTransferScale);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_getExceptionParameters(const OpenMM_HippoNonbondedForce*, int, int*, int*, double*, double*, double*, double*, double*, double*)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_getExceptionParameters(
      PointerByReference target,
      int index,
      IntByReference particle1,
      IntByReference particle2,
      DoubleByReference multipoleMultipoleScale,
      DoubleByReference dipoleMultipoleScale,
      DoubleByReference dipoleDipoleScale,
      DoubleByReference dispersionScale,
      DoubleByReference repulsionScale,
      DoubleByReference chargeTransferScale);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_setExceptionParameters(OpenMM_HippoNonbondedForce*, int, int, int, double, double, double, double, double, double)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_setExceptionParameters(
      PointerByReference target,
      int index,
      int particle1,
      int particle2,
      double multipoleMultipoleScale,
      double dipoleMultipoleScale,
      double dipoleDipoleScale,
      double dispersionScale,
      double repulsionScale,
      double chargeTransferScale);
  /**
   * Original signature : <code>
   * double OpenMM_HippoNonbondedForce_getEwaldErrorTolerance(const OpenMM_HippoNonbondedForce*)
   * </code>
   */
  public static native double OpenMM_HippoNonbondedForce_getEwaldErrorTolerance(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_setEwaldErrorTolerance(OpenMM_HippoNonbondedForce*, double)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_setEwaldErrorTolerance(
      PointerByReference target, double tol);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_getLabFramePermanentDipoles(OpenMM_HippoNonbondedForce*, OpenMM_Context*, OpenMM_Vec3Array*)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_getLabFramePermanentDipoles(
      PointerByReference target, PointerByReference context, PointerByReference dipoles);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_getInducedDipoles(OpenMM_HippoNonbondedForce*, OpenMM_Context*, OpenMM_Vec3Array*)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_getInducedDipoles(
      PointerByReference target, PointerByReference context, PointerByReference dipoles);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_updateParametersInContext(OpenMM_HippoNonbondedForce*, OpenMM_Context*)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_updateParametersInContext(
      PointerByReference target, PointerByReference context);
  /**
   * Original signature : <code>
   * OpenMM_Boolean OpenMM_HippoNonbondedForce_usesPeriodicBoundaryConditions(const OpenMM_HippoNonbondedForce*)
   * </code>
   */
  public static native int OpenMM_HippoNonbondedForce_usesPeriodicBoundaryConditions(
      PointerByReference target);
  /**
   * Original signature : <code>
   * OpenMM_AmoebaGKCavitationForce* OpenMM_AmoebaGKCavitationForce_create()</code>
   */
  public static native PointerByReference OpenMM_AmoebaGKCavitationForce_create();
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGKCavitationForce_destroy(OpenMM_AmoebaGKCavitationForce*)</code>
   */
  public static native void OpenMM_AmoebaGKCavitationForce_destroy(PointerByReference target);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaGKCavitationForce_addParticle(OpenMM_AmoebaGKCavitationForce*, double, double, OpenMM_Boolean)
   * </code>
   */
  public static native int OpenMM_AmoebaGKCavitationForce_addParticle(
      PointerByReference target, double radius, double gamma, int ishydrogen);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGKCavitationForce_setParticleParameters(OpenMM_AmoebaGKCavitationForce*, int, double, double, OpenMM_Boolean)
   * </code>
   */
  public static native void OpenMM_AmoebaGKCavitationForce_setParticleParameters(
      PointerByReference target, int index, double radius, double gamma, int ishydrogen);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGKCavitationForce_getParticleParameters(const OpenMM_AmoebaGKCavitationForce*, int, double*, double*, OpenMM_Boolean*)
   * </code>
   */
  public static native void OpenMM_AmoebaGKCavitationForce_getParticleParameters(
      PointerByReference target,
      int index,
      DoubleBuffer radius,
      DoubleBuffer gamma,
      IntBuffer ishydrogen);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGKCavitationForce_getParticleParameters(const OpenMM_AmoebaGKCavitationForce*, int, double*, double*, OpenMM_Boolean*)
   * </code>
   */
  public static native void OpenMM_AmoebaGKCavitationForce_getParticleParameters(
      PointerByReference target,
      int index,
      DoubleByReference radius,
      DoubleByReference gamma,
      IntByReference ishydrogen);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaGKCavitationForce_getNumParticles(const OpenMM_AmoebaGKCavitationForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaGKCavitationForce_getNumParticles(
      PointerByReference target);
  /**
   * Original signature : <code>
   * OpenMM_AmoebaGKCavitationForce_NonbondedMethod OpenMM_AmoebaGKCavitationForce_getNonbondedMethod(const OpenMM_AmoebaGKCavitationForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaGKCavitationForce_getNonbondedMethod(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGKCavitationForce_setNonbondedMethod(OpenMM_AmoebaGKCavitationForce*, OpenMM_AmoebaGKCavitationForce_NonbondedMethod)
   * </code>
   */
  public static native void OpenMM_AmoebaGKCavitationForce_setNonbondedMethod(
      PointerByReference target, int method);
  /**
   * Original signature : <code>
   * double OpenMM_AmoebaGKCavitationForce_getCutoffDistance(const OpenMM_AmoebaGKCavitationForce*)
   * </code>
   */
  public static native double OpenMM_AmoebaGKCavitationForce_getCutoffDistance(
      PointerByReference target);
